# lpa2-taller3

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt
frontend/: app.py
frontend/templates/: base.html  canciones.html  crear_cancion.html  crear_usuario.html  favoritos.html  index.html  usuarios.html
musica_api/: config.py  crud.py  database.py
musica_api/models/: __init__.py  cancion.py  favorito.py  usuario.py
musica_api/routers/: canciones.py  favoritos.py  usuarios.py
musica_api/schemas/: cancion_schema.py  favorito_schema.py  usuario_schema.py
tests/: conftest.py  test_api.py
